# path-matchers

./: Cargo.toml  README.md
src/: lib.rs  path_matcher_and.rs  path_matcher_any.rs  path_matcher_equal.rs  path_matcher_func.rs  path_matcher_glob.rs  path_matcher_not.rs  path_matcher_or.rs  path_matcher_starts_with.rs  path_matcher_true.rs
